2015-06-23 Marco Giammarini <m.giammarini@warcomeb.it>

    * Ultimato lo sviluppo della gestione delle produzione.

    * Uniformata la creazione delle note, rendendolo un database unico.

    * Durante l'interrograzione del database, il tipo di ritorno all'interno di un vettore è un oggetto della classe e non qualcosa di derivato.

    * Uniformata la gestione delle attività come per le produzioni.

2015-06-08 Marco Giammarini <m.giammarini@warcomeb.it>

    * Continua lo sviluppo della grafica di gestione delle produzione in particolare il dialog per l'inserimento/modifica/visualizzazione di una produzione.

2015-06-04 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunta la gestione delle note di produzione con creazione della classe madre Note

    * Aggiornate le funzioni di gestione delle note nelle altre classi

    * Ultimate le funzioni della classe ProductionDatabase

2015-01-22 Marco Giammarini <m.giammarini@warcomeb.it>

    * Ultimata la classe ProductionDatabase anche se le funzioni relative alle note sono commentate per permettere la compilazione.

2015-01-14 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunta la classe ProductionDatabase ed iniziata l'implementazione di alcune funzioni.

2015-01-13 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunta la classe Production, modello per la gestione delle produzioni.

2015-01-07 Marco Giammarini <m.giammarini@warcomeb.it>

    * Corretta la visualizzazione delle attivita' e dei collaboratori con scelte multiple.

    * Rilasciata versione 0.1.2

2015-01-07 Marco Giammarini <m.giammarini@warcomeb.it>

    * Rilasciata versione 0.1.1

2015-01-07 Marco Giammarini <m.giammarini@warcomeb.it>

    * Corretta il salvataggio dell'utente corretto nelle attivita'.

2015-01-05 Marco Giammarini <m.giammarini@warcomeb.it>

    * Rilasciata versione 0.1.0

2014-12-17 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunto il dialog per la gestione di piu' file di configurazione. WiP!
