@@ -1,3 +1,7 @@
+2015-07-03 Marco Giammarini <m.giammarini@warcomeb.it>
+
+    * Aggiunto il delete delle attivita'.
+
 2015-06-23 Marco Giammarini <m.giammarini@warcomeb.it>
 
     * Ultimato lo sviluppo della gestione delle produzione.
